# cool-compiler

./: .gitignore  2.cl  CMakeLists.txt  Makefile  compile.sh  cool.flex  cool.y  lexer-main.cc  parser-main.cc  run.sh  test-main.cpp  test.sh  test1.sh
asm/: sumsquare.asm  sumsquare_p.asm
asm/trap/: trap.handler.asm
cgen/: CMakeLists.txt  PrototypeCoder.cpp  PrototypeCoder.h  TemporariesCounter.cpp  TemporariesCounter.h  cgen.cc  cgen.h  cgen_expression_plumbing.cc  cgen_expressions.cc  cgen_helpers.cpp  cgen_helpers.h  cgen_primitive.cc  emit.h  string_util.h
cooldist/: CMakeLists.txt  handle_flags.cc  stringtab.h  stringtab_functions.h
doc/: cgen_notes.txt
semant/: CMakeLists.txt  extern_symbols.h  inheritance.cpp  inheritance.h  semant.cc  semant.h  semant_error.cpp  semant_error.h  symtab.h  tree_node.h  type_checker.cpp  type_checker.h  type_env.cpp  type_env.h  visitor.cpp  visitor.h
test/: 2.cl  2.tree  atoi.cl  bad_semant.cl  good_cgen.cl  io.cl  test.in  test.sh  test1.cl
tree/: CMakeLists.txt  ClassTable.cpp  ClassTable.h  cool-tree.cc  cool-tree.h  cool-tree.handcode.h  extern_symbols.h  handle_flags.cc  tree.cc  tree.h  visitor.h
unused/: tree_node.h
